--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,7 @@
   box-sizing: border-box;
   font-family: "Quicksand", "sans-serif";
 }
+
+.ranges-slider > .swiper-pagination {
+  bottom: -5px;
+}
